fix(java): 将 Set.of() 替换为 Java 8 兼容写法
Set.of() 是 Java 9+ API，运行时为 Java 8 导致 NoSuchMethodError，
改用 Collections.unmodifiableSet + Arrays.asList

Made-with: Cursor